bug: sticky navabr went behind about and services cards. Styled the navbar to have Z index of 1000.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,7 @@
 .navbar {
   background-color: #333;
   color: white;
+  z-index: 1000;
 }
 
 .dropdown-menu {
